--- a/css/app.css
+++ b/css/app.css
@@ -37,7 +37,6 @@
   font-weight: bold;
   font-size: 1.3em;
   color: #FFF;
-  transition: color .3s ease-out;
 }
 
 .moreann a, .moreRes, .viewcalendar a{
@@ -50,17 +49,20 @@
   cursor: pointer;
   bottom: 10%;
   color: #333;
-  transition: color .3s ease-out;
 }
 
 .viewcalendar a{
   margin: 0 auto;
   color: #FFF;
+}
+
+#socialWrap .phone a, #mission span a, h2 a, a h3, .eventArticle .readmore a, .newsArticle .readmore a, .moreann a, #moreannMobile a,
+.viewcalendar a, .moreRes, .footer #footAddress div:nth-child(1) p a, .footer #footAddress div:nth-child(3) p a{
   transition: color .3s ease-out;
 }
 
-#mission span a:hover, h2 a:hover, a h3:hover, .eventArticle .readmore a:hover, .newsArticle .readmore a:hover, .moreann a:hover, #moreannMobile a:hover,
-.viewcalendar a:hover, .moreRes:hover, .footer #footAddress div:nth-child(1) p a:hover{
+#socialWrap .phone a:hover, #mission span a:hover, h2 a:hover, a h3:hover, .eventArticle .readmore a:hover, .newsArticle .readmore a:hover, .moreann a:hover, #moreannMobile a:hover,
+.viewcalendar a:hover, .moreRes:hover, .footer #footAddress div:nth-child(1) p a:hover, .footer #footAddress div:nth-child(3) p a:hover{
   color: #FF033E !important;
 }
 
@@ -72,7 +74,6 @@
 .eventDate h3{
   color: #0a0699 !important;
   text-align: center !important;
-  transition: color .3s ease-out;
 }
 
 .eventImg{
@@ -109,27 +110,31 @@
   border-bottom: #FF033E solid 1px;
 }
 
-#header1 #socialNumber #socialWrap{
+#socialWrap{
   float: right;
   margin-right: 2%;
   width: 10%;
 }
 
-#header1 #socialNumber #socialWrap .phone{
+#socialWrap .phone{
   float: left;
   margin-right: 5%;
 }
 
-#header1 #socialNumber #socialWrap #social.icons{
+#socialWrap .phone a{
+  color: #FFF;
+}
+
+#social.icons{
   float: left;
   cursor: pointer;
 }
 
-#header1 #socialNumber #socialWrap #social.icons, #header1 #socialNumber #socialWrap #social.icons img{
+#social.icons, #social.icons img{
   width: 30%;
 }
 
-#header1 #socialNumber #socialWrap #social.icons img:nth-child(1){
+#social.icons img:nth-child(1){
   margin-right: 5%;
 }
 
@@ -504,7 +509,6 @@
   font-family: 'Open Sans Condensed', sans-serif !important;
   font-size: .8em !important;
   color: #333;
-  transition: color .3s ease-out;
 }
 
 #quickLink > div > div > div > div:nth-child(3){
@@ -808,7 +812,6 @@
  margin-bottom: 6%;
  color: #333;
  font-family: 'Open Sans Condensed', sans-serif;
- transition: color .3s ease-out;
 }
 
 #resource-twit #article1 > div:nth-child(3){
@@ -920,7 +923,6 @@
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1.2em;
   color: #FFF;
-  transition: color .3s ease-out;
 }
 
 .footer #footAddress div:nth-child(1) p a{
@@ -941,6 +943,10 @@
 
 .footer #footAddress div:nth-child(3) p span{
   font-weight: 700;
+  color: #FFF;
+}
+
+.footer #footAddress div:nth-child(3) p a{
   color: #FFF;
 }
 /*END FOOTER*/
@@ -1045,7 +1051,7 @@
 
 
 
-@media only screen and (min-width: 320px) and (max-width: 1711px) {
+@media only screen and (max-width: 1711px) {
   #news-events #article1, #news-events #article2{
     padding-top: 15% !important;
   }
@@ -1058,7 +1064,7 @@
     padding: .5% 0 2%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 12%;
   }
 
@@ -1127,7 +1133,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 12%;
   }
 
@@ -1175,7 +1181,7 @@
     padding: .5% 0 2%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 12%;
   }
 
@@ -1299,7 +1305,7 @@
     padding: .5% 0 2%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 14%;
   }
 
@@ -1437,7 +1443,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 14%;
   }
 
@@ -1586,7 +1592,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 14%;
   }
 
@@ -1754,7 +1760,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 15%;
   }
 
@@ -1922,7 +1928,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 15%;
   }
 
@@ -2091,7 +2097,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 15%;
   }
 
@@ -2270,7 +2276,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 17%;
   }
 
@@ -2453,7 +2459,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 17%;
   }
 
@@ -2675,7 +2681,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 17%;
   }
 
@@ -2943,7 +2949,7 @@
     padding: .5% 0 2.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 19%;
   }
 
@@ -3198,7 +3204,7 @@
     padding: .5% 0 3%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 21%;
   }
 
@@ -3480,7 +3486,7 @@
     padding: .5% 0 3%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 21%;
   }
 
@@ -3747,7 +3753,7 @@
     padding: .5% 0 3%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 24%;
   }
 
@@ -4036,7 +4042,7 @@
     padding: .5% 0 3%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 24%;
   }
 
@@ -4328,7 +4334,7 @@
     padding: .5% 0 4%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 24%;
   }
 
@@ -4622,7 +4628,7 @@
     padding: .5% 0 4%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 27%;
   }
 
@@ -4926,7 +4932,7 @@
     padding: .5% 0 4%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 27%;
   }
 
@@ -5230,7 +5236,7 @@
     padding: .5% 0 4.5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 33%;
     float: none;
     margin: 0 auto;
@@ -5504,11 +5510,21 @@
 
 
 
-@media only screen and (min-width: 320px) and (max-width: 641px) {
+@media only screen and (max-width: 641px) {
   .top-bar-section{
     -webkit-box-shadow: -10px 10px 19px -2px rgba(0, 0, 0, .3);
     -moz-box-shadow: -10px 10px 19px -2px rgba(0, 0, 0, .3);
     box-shadow: -10px 10px 19px -2px rgba(0, 0, 0, .3);
+  }
+
+  #header1 ul li ul{
+    opacity: 0;
+    display: none;
+    position: absolute;
+    left: -96% !important;
+    margin-top: -315px !important;
+    background: #0a0699;
+    border: #FF033E solid 6px;
   }
 
   #moreannMobile, .maBTN, #morecalMobile, .caBTN{
@@ -5547,11 +5563,6 @@
     display: none;
   }
 
-
-
-
-
-
   #news-events #article1{
     padding-bottom: 2%;
   }
@@ -5582,7 +5593,7 @@
     padding: .5% 0 5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 33%;
     float: none;
     margin: 0 auto;
@@ -5594,8 +5605,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 53%;
+    width: 50% !important;
+    margin: 1% 0 0 43%;
     padding-top: .7%;
     padding-left: 30%;
     background: transparent !important;
@@ -5622,7 +5633,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 45% !important;
+    margin-left: 55% !important;
   }
 
   .title-area li a{
@@ -5637,7 +5648,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 2.7%;
+    margin-top: 2.2%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -5949,7 +5960,7 @@
     padding: .5% 0 5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 33%;
     float: none;
     margin: 0 auto;
@@ -5961,8 +5972,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 53%;
+    width: 55% !important;
+    margin: 1% 0 0 38%;
     padding-top: .7%;
     background: transparent !important;
     position: absolute;
@@ -5988,7 +5999,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 40% !important;
+    margin-left: 55% !important;
   }
 
   .title-area li a{
@@ -6003,7 +6014,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 2.8%;
+    margin-top: 1.9%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -6311,7 +6322,7 @@
     padding: .5% 0 5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 33%;
     float: none;
     margin: 0 auto;
@@ -6323,8 +6334,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 50%;
+    width: 60% !important;
+    margin: 1.2% 0 0 30%;
     padding-top: .7%;
     background: transparent !important;
     position: absolute;
@@ -6350,7 +6361,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 38.5% !important;
+    margin-left: 55% !important;
   }
 
   .title-area li a{
@@ -6365,7 +6376,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 3%;
+    margin-top: 1.8%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -6671,7 +6682,7 @@
     padding: .5% 0 5%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 37%;
     float: none;
     margin: 0 auto;
@@ -6683,8 +6694,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 50%;
+    width: 60% !important;
+    margin: .5% 0 0 35%;
     padding-top: .7%;
     background: transparent !important;
     position: absolute;
@@ -6710,7 +6721,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 31% !important;
+    margin-left: 55% !important;
   }
 
   .title-area li a{
@@ -6725,7 +6736,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 3.7%;
+    margin-top: 3.3%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -7032,7 +7043,7 @@
     padding: .5% 0 7%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 41%;
     float: none;
     margin: 0 auto;
@@ -7044,8 +7055,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 50%;
+    width: 65% !important;
+    margin: 1% 0 0 30%;
     padding-top: .7%;
     background: transparent !important;
     position: absolute;
@@ -7071,7 +7082,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 23% !important;
+    margin-left: 43% !important;
   }
 
   .title-area li a{
@@ -7086,7 +7097,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 4.7%;
+    margin-top: 3.2%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -7389,7 +7400,7 @@
     padding: .5% 0 7%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 46%;
     float: none;
     margin: 0 auto;
@@ -7401,8 +7412,8 @@
   }
 
   .top-bar {
-    width: 40% !important;
-    margin: 1% 0 0 50%;
+    width: 75% !important;
+    margin: 1% 0 0 15%;
     padding-top: .7%;
     background: transparent !important;
     position: absolute;
@@ -7428,7 +7439,7 @@
   .title-area{
     background: transparent;
     width: 110px;
-    margin-left: 15% !important;
+    margin-left: 50% !important;
   }
 
   .title-area li a{
@@ -7443,7 +7454,7 @@
     float: right;
     background: #0a0699;
     padding: 0;
-    margin-top: 5.5%;
+    margin-top: 3.3%;
     margin-left: 15% !important;
     border-left: #FF033E solid 6px;
     border-right: #FF033E solid 6px;
@@ -7758,7 +7769,7 @@
     padding: .5% 0 8%;
   }
 
-  #header1 #socialNumber #socialWrap{
+  #socialWrap{
     width: 53.4%;
     float: none;
     margin: 0 auto;
