--- a/css/about.css
+++ b/css/about.css
@@ -76,7 +76,7 @@
   color: #FFF;
   font-size: 1.5em;
   font-family: 'Open Sans Condensed', sans-serif;
-  text-align: center;
+  text-align: left;
   padding: 1% 25% 3%;
   margin-bottom: 0;
 }
@@ -87,7 +87,6 @@
 /*VISION/BELIEFS*/
 .squareWrap{
   background: #0a0699;
-  height: 900px;
 }
 
 .squareWrap div.row{
@@ -104,12 +103,12 @@
 }
 
 .squareWrap #article1, .squareWrap #article2{
+  padding-bottom: 10vh;
   height: 100%;
 }
 
 .squareWrap #article1{
   background: #CCC;
-  height: 100% !important;
 }
 
 .squareWrap #article1 #headContainer, .squareWrap #article2 #headContainer2{
@@ -163,17 +162,12 @@
 
 /*GLOBAL LEADERS*/
 #globalLeaders{
-  height: 700px;
   background-color: #0a0699;
   padding: 1% 0;
 }
 
 #globalLeaders > div > div .graphicEle{
   margin-bottom: 2.5%;
-}
-
-#globalLeaders > div > div .panel{
-  padding: 0 2% 2%;
 }
 
 #globalLeaders > div > div .panel div p{
@@ -185,174 +179,48 @@
 
 
 
-@media only screen and (min-width: 1861px) and (max-width: 1990px){
-
-}
-
-
-
-@media only screen and (max-width: 1860px) {
-
-}
-
-
-
-@media only screen and (min-width: 1712px) and (max-width: 1860px){
-
-}
-
-
-
-@media only screen and (min-width: 320px) and (max-width: 1711px) {
-
-}
-
-
-
-@media only screen and (min-width: 1531px) and (max-width: 1711px) {
-
-}
-
-@media only screen and (min-width: 1530px) and (max-width: 1584px) {
-
-}
-
-@media only screen and (min-width: 1429px) and (max-width: 1529px){
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+@media only screen and (min-width: 1356px) and (max-width: 1711px) {
+  .squareWrap #article1 .article1Container h3, .squareWrap #article2 .article1Container h3{
+    font-size: 1.5em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 30%;
+  .squareWrap #article1 .article1Container p, .squareWrap #article1 .article1Container ul li, .squareWrap #article2 .article1Container p{
+    font-size: .9em;
   }
 }
 
 
 
-@media only screen and (min-width: 1357px) and (max-width: 1428px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+@media only screen and (min-width: 1098px) and (max-width: 1355px) {
+  #missionAb > div > div > div:nth-child(1) h1, .squareWrap #article1 #headContainer h1, .squareWrap #article2 #headContainer2 h1, #globalLeaders > div > div h1{
+    font-size: 3em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 30%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1277px) and (max-width: 1356px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+  #missionAb > div > div > div:nth-child(2) p, .squareWrap #article1 .article1Container h3, .squareWrap #article2 .article1Container h3{
+    font-size: 1.2em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
+  .squareWrap #article1 .article1Container p, .squareWrap #article1 .article1Container ul li, .squareWrap #article2 .article1Container p{
+    font-size: .8em;
   }
 }
 
 
-
-@media only screen and (min-width: 1227px) and (max-width: 1276px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+@media only screen and (min-width: 904px) and (max-width: 1098px) {
+  div > div .panel div{
+    margin-bottom: 5%;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1218px) and (max-width: 1226px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+  #missionAb > div > div > div:nth-child(1) h1, .squareWrap #article1 #headContainer h1, .squareWrap #article2 #headContainer2 h1, #globalLeaders > div > div h1{
+    font-size: 3em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1170px) and (max-width: 1217px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
+  #missionAb > div > div > div:nth-child(2) p, .squareWrap #article1 .article1Container h3, .squareWrap #article2 .article1Container h3{
+    font-size: 1.2em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1147px) and (max-width: 1169px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1134px) and (max-width: 1146px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1098px) and (max-width: 1133px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 16%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 1013px) and (max-width: 1097px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 18%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
-  }
-}
-
-
-
-@media only screen and (min-width: 974px) and (max-width: 1012px) {
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-    margin-top: 18%;
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
+  .squareWrap #article1 .article1Container p, .squareWrap #article1 .article1Container ul li, .squareWrap #article2 .article1Container p{
+    font-size: .8em;
   }
 }
 
@@ -363,17 +231,41 @@
     margin-top: 18%;
     margin-bottom: 4%;
   }
+}
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
+
+
+@media only screen and (min-width: 642px) and (max-width: 903px) {
+  .columns{
+    padding: 0 !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    margin-bottom: 4%;
+  .graphicEle img{
+    width: 21%;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 40%;
+  #missionAb > div > div > div:nth-child(1) h1, .squareWrap #article1 #headContainer h1, .squareWrap #article2 #headContainer2 h1, #globalLeaders > div > div h1{
+    font-size: 2.5em !important;
+  }
+
+  #missionAb > div > div > div:nth-child(2) p, .squareWrap #article1 .article1Container h3, .squareWrap #article2 .article1Container h3{
+    font-size: .9em !important;
+  }
+
+  .squareWrap{
+    height: 860px;
+  }
+
+  .squareWrap #article1 .article1Container p, .squareWrap #article1 .article1Container ul li, .squareWrap #article2 .article1Container p{
+    font-size: .7em;
+  }
+
+  #globalLeaders > div > div .panel{
+    padding-left: 3%;
+  }
+
+  #globalLeaders > div > div .panel > :first-child{
+    margin-bottom: 45%;
   }
 }
 
@@ -386,17 +278,8 @@
     font-size: 7em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 2em;
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  .graphicEle img{
+    width: 16%;
   }
 }
 
@@ -406,20 +289,10 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 18%;
     margin-bottom: 4%;
-    font-size: 7em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 2em;
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  .graphicEle img{
+    width: 16%;
   }
 }
 
@@ -429,20 +302,10 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 18%;
     margin-bottom: 4%;
-    font-size: 7em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 2em;
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  .graphicEle img{
+    width: 16%;
   }
 }
 
@@ -452,20 +315,11 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 22%;
     margin-bottom: 4%;
-    font-size: 6em;
+    font-size: 5em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 2em;
-    margin-bottom: 4%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  .graphicEle img{
+    width: 16%;
   }
 }
 
@@ -475,20 +329,19 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 22%;
     margin-bottom: 4%;
-    font-size: 6em;
+    font-size: 4.5em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
+  .graphicEle img{
+    width: 21%;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 2em;
-    margin-bottom: 4%;
+  div > div > .panel > h1{
+    font-size: 2.7em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  div > div .panel > h2{
+    font-size: 2em !important;
   }
 }
 
@@ -498,20 +351,19 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 26%;
     margin-bottom: 4%;
-    font-size: 5em;
+    font-size: 4.5em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
+  .graphicEle img{
+    width: 21%;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.7em;
-    margin-bottom: 4%;
+  div > div > .panel > h1{
+    font-size: 3em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 50%;
+  div > div .panel > h2{
+    font-size: 2.5em !important;
   }
 }
 
@@ -521,27 +373,75 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 26%;
     margin-bottom: 4%;
-    font-size: 5em;
+    font-size: 4em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 4%;
+  .graphicEle img{
+    width: 21%;
+  }
+}
+
+
+
+@media only screen and (max-width: 641px) {
+  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
+    font-size: 4em !important;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.7em;
-    margin-bottom: 6%;
+  .graphicEle img{
+    width: 15%;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 70%;
+  #missionAb > div > div > div:nth-child(1) h1, .squareWrap #article1 #headContainer h1, .squareWrap #article2 #headContainer2 h1, #globalLeaders > div > div h1{
+    font-size: 2.5em !important;
+  }
+
+  #missionAb>div>div>div:nth-child(2) p{
+    font-size: 1.2em !important;
+    text-align: left;
+    padding: 0 6%;
+  }
+
+  .squareWrap #article1 .article1Container h3, .squareWrap #article2 .article1Container h3{
+    font-size: 1em !important;
+  }
+
+  .squareWrap #article1, .squareWrap #article2{
+    padding-bottom: 0vh !important;
+  }
+
+  .squareWrap #article1 .article1Container p, .squareWrap #article1 .article1Container ul li, .squareWrap #article2 .article1Container p{
+    font-size: .7em;
+  }
+
+  #globalLeaders{
+    padding-bottom: 4%;
+  }
+
+  #globalLeaders > div > div .panel div{
+    margin-bottom: 5%;
+  }
+
+  #globalLeaders > div > div .panel div.columns{
+    padding: 0;
+    margin: 0;
+  }
+
+  #globalLeaders > div > div .panel div p{
+    padding: 0;
+    margin-bottom: 0;
+    font-size: 1.3em !important;
   }
 }
 
 
 
 @media only screen and (min-width: 320px) and (max-width: 641px) {
-
+  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
+    margin-top: 26%;
+    margin-bottom: 6%;
+    font-size: 4em;
+  }
 }
 
 
@@ -550,20 +450,7 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
     margin-top: 26%;
     margin-bottom: 6%;
-    font-size: 5em;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.7em;
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 70%;
+    font-size: 4em;
   }
 }
 
@@ -575,19 +462,6 @@
     margin-bottom: 6%;
     font-size: 5em;
   }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.7em;
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 70%;
-  }
 }
 
 
@@ -597,19 +471,6 @@
     margin-top: 26%;
     margin-bottom: 6%;
     font-size: 5em;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.5em;
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 70%;
   }
 }
 
@@ -649,16 +510,6 @@
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
     margin-bottom: 6%;
   }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1em;
-    line-height: 30px;
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 75%;
-  }
 }
 
 
@@ -668,20 +519,6 @@
     margin-top: 26%;
     margin-bottom: 6%;
     font-size: 4.5em;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-    margin-bottom: 6%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.5em;
-    margin-bottom: 15%;
-    line-height: 30px;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 100%;
   }
 }
 
@@ -694,22 +531,8 @@
     font-size: 3.5em;
   }
 
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle{
-    margin-bottom: 6%;
-  }
-
   #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle img{
     width: 30%;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
-    font-size: 1.5em;
-    margin-bottom: 15%;
-    line-height: 30px;
-  }
-
-  #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools{
-    width: 100%;
   }
 }
 /*END ABOUT*/
