--- a/css/app.css
+++ b/css/app.css
@@ -58,6 +58,9 @@
 
 #socialWrap .phone a, #mission span a, h2 a, a h3, .eventArticle .readmore a, .newsArticle .readmore a, .moreann a, #moreannMobile a,
 .viewcalendar a, .moreRes, .footer #footAddress div:nth-child(1) p a, .footer #footAddress div:nth-child(3) p a{
+  -webkit-transition: color .3s ease-out;
+  -moz-transition: color .3s ease-out;
+  -o-transition: color .3s ease-out;
   transition: color .3s ease-out;
 }
 
@@ -185,6 +188,9 @@
   height: 1px;
   width: 0px;
   background: #FF033E;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  -moz-transition: width .5s ease, background-color .5s ease;
+  -o-transition: width .5s ease, background-color .5s ease;
   transition: width .5s ease, background-color .5s ease;
 }
 
@@ -210,6 +216,9 @@
   height: 1px;
   width: 0px;
   background: transparent;
+  -webkit-transition: width .5s ease, background-color .5s ease;
+  -moz-transition: width .5s ease, background-color .5s ease;
+  -o-transition: width .5s ease, background-color .5s ease;
   transition: width .5s ease, background-color .5s ease;
 }
 
@@ -366,21 +375,21 @@
 
 
 .scrollBTN{
-    opacity: 0;
-    visibility: hidden;
-    position: fixed;
-    z-index: 1100;
-    background-color: #E90101;
-    width: 50px;
-    line-height: 48px;
-    float: right;
-    top: 55% !important;
-    right: 5%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    padding: 0 .3% !important;
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  z-index: 1100;
+  background-color: #E90101;
+  width: 50px;
+  line-height: 48px;
+  float: right;
+  top: 55% !important;
+  right: 5%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 0 .3% !important;
 }
 
 .scrollBTN:hover {
@@ -862,6 +871,36 @@
  font-size: 4em;
  float: left;
  color: #FFF;
+}
+
+#resource-twit #headContainer2 .graphicEle{
+  margin-bottom: 6%;
+}
+
+.twitterFeed{
+  height: 400px;
+  overflow-y: scroll;
+}
+
+.twitterFeed::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.twitterFeed::-webkit-scrollbar{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.twitterFeed::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(255,0,61)),
+									   color-stop(0.72, rgb(255,0,61)),
+									   color-stop(0.86, rgb(173,4, 52)));
 }
 
 .moreRes{
