--- a/css/app.css
+++ b/css/app.css
@@ -100,6 +100,7 @@
   border-bottom: #FF033E solid 6px;
   -webkit-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+  -o-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
   box-shadow: 0 5px 7px 2px rgba(0, 0, 0, 0.3);
 }
 
@@ -374,26 +375,42 @@
 
 
 
-.scrollBTN{
+.scrollWrap{
   opacity: 0;
   visibility: hidden;
+  width: 140px;
   position: fixed;
   z-index: 1100;
-  background-color: #E90101;
-  width: 50px;
-  line-height: 48px;
   float: right;
   top: 55% !important;
-  right: 5%;
+  right: 3%;
+  text-align: center;
+}
+
+.scrollBTN{
+  width: 37%;
+  background-color: #E90101;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  padding: 0 .3% !important;
+  padding: 3% .3% 2% !important;
+  font-size: .7em !important;
+  /*-webkit-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+  -o-box-shadow: 0 15px 19px 2px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 5px 7px 2px rgba(0, 0, 0, 0.3);*/
 }
 
-.scrollBTN:hover {
+.scrollBTN:hover{
 	background-color: #888888;
+}
+
+.scrollBTN p{
+  color: #FFF;
+  font-family: 'Open Sans Condensed', sans-serif;
+  margin: 0 auto;
+  padding: 0 !important;
 }
 
 .scrollBTN img{
@@ -5583,14 +5600,21 @@
     box-shadow: -10px 10px 19px -2px rgba(0, 0, 0, .3);
   }
 
-  #header1 ul li ul{
+  #header1 ul #linkFaculty ul, #header1 ul #linkAbout ul{
     opacity: 0;
     display: none;
     position: absolute;
-    left: -96% !important;
-    margin-top: -315px !important;
+    left: -138px !important;
     background: #0a0699;
     border: #FF033E solid 6px;
+  }
+
+  #header1 ul #linkFaculty ul{
+    margin-top: -315px !important;
+  }
+
+  #header1 ul #linkAbout ul{
+    margin-top: -67px !important;
   }
 
   #moreannMobile, .maBTN, #morecalMobile, .caBTN{
