--- a/css/about.css
+++ b/css/about.css
@@ -13,10 +13,20 @@
 
 #aboutHome #homeWrap #welcome div:nth-child(1) .panel {
   position: relative;
+  padding: 0;
+  margin-bottom: 0 !important;
 }
 
 #aboutHome #homeWrap #welcome div.columns {
   padding: 0 !important;
+}
+
+#aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro{
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  right: 0;
+  margin-top: 11.1%;
 }
 
 #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
@@ -25,12 +35,32 @@
   padding: 0 !important;
   font-size: 5.5em;
   color: #0a0699;
-  margin-top: 10%;
-  margin-bottom: 1%;
 }
 
 #aboutHome #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
   margin: 0 auto 2%;
+}
+
+#aboutHome #homeWrap #welcome .bckWrap{
+  min-width: 2000px !important;
+  min-height: 490px !important;
+  width: 100% !important;
+  height: 100% !important;
+  position: relative;
+}
+
+/*.bckWrap .overlay{
+  position: absolute;
+  z-index: 2 !important;
+  top: 0;
+}*/
+
+#aboutHome #homeWrap #welcome .bckWrap .bck{
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/aboutHeadImg.jpg) no-repeat 0 25% / cover;
 }
 /*END HOME*/
 
