--- a/css/app.css
+++ b/css/app.css
@@ -41,7 +41,7 @@
 
 .moreann a, .moreRes, .viewcalendar a{
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 2em !important;
   text-align: center;
 }
 
