--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,7 @@
   display: block; }
 
 .newsImg {
-  width: 40%; }
+  width: 90%; }
 
 .readmore a, .moreann a, .moreRes, .viewcalendar a {
   font-family: "Open Sans Condensed", sans-serif; }
@@ -103,8 +103,7 @@
   border-bottom: #C2A34F solid 1px; }
 
 #socialWrap {
-  float: right;
-  margin-right: 2%;
+  margin: 0 auto;
   width: 10%; }
 
 #socialWrap .phone {
@@ -115,6 +114,7 @@
   color: #FFF; }
 
 #social.icons {
+  display: none;
   float: left;
   cursor: pointer; }
 
@@ -128,16 +128,47 @@
   float: left;
   width: 135px;
   margin-left: 3%;
-  padding: .2% 0; }
+  margin-right: 20%;
+  padding: .8% 0; }
+
+.schoolName {
+  float: left;
+  padding-top: 0 !important; }
+
+.schoolName h1 {
+  font-family: "Lora", serif;
+  font-weight: 700;
+  font-size: 7em;
+  color: #FFF;
+  width: 100%;
+  padding: 0 !important;
+  margin-top: -1.5% !important;
+  margin-bottom: .5%; }
+
+.schoolName .graphicEle {
+  margin: 0 auto 2%; }
+
+.scsLogo {
+  cursor: pointer;
+  width: 5.5%;
+  margin-top: 1%;
+  margin-right: 3%;
+  float: right; }
+
+.scsLogo a img {
+  cursor: pointer;
+  width: 100%; }
 
 .top-bar {
-  width: 940px !important;
-  padding-top: 1.7%;
-  margin: 1% 0 0 16%;
-  float: left; }
+  width: 100%;
+  float: left;
+  background: #C2A34F; }
 
 .top-bar.columns {
   padding-right: 0; }
+
+.top-bar-section {
+  margin-left: 20%; }
 
 .top-bar-section ul li {
   position: relative;
@@ -177,7 +208,7 @@
   margin: auto;
   height: 1px;
   width: 80%;
-  background: #C2A34F; }
+  background: #FFF; }
 
 #header1 ul li.slideUnder a, .slideUnderDrop a {
   display: inline-block;
@@ -198,11 +229,11 @@
 
 #header1 .slideUnder:hover:after {
   width: 80%;
-  background: #C2A34F; }
+  background: #FFF; }
 
 .slideUnderDrop:hover:after {
   width: 80%;
-  background: #640199; }
+  background: #FFF; }
 
 .underLine:after {
   content: '';
@@ -210,18 +241,7 @@
   margin: auto;
   height: 1px;
   width: 80%;
-  background: #640199; }
-
-.scsLogo {
-  cursor: pointer;
-  width: 5.5%;
-  margin-top: .7%;
-  margin-right: 3%;
-  float: right; }
-
-.scsLogo a img {
-  cursor: pointer;
-  width: 100%; }
+  background: #FFF; }
 
 #header1 ul li ul {
   opacity: 0;
@@ -248,7 +268,7 @@
 /*END HEADER*/
 /*HOME*/
 #home {
-  height: 950px; }
+  height: 700px; }
 
 #home #homeWrap {
   height: 100%;
@@ -265,19 +285,6 @@
 #home #homeWrap #welcome div.columns {
   padding: 0 !important; }
 
-#home #homeWrap #welcome div:nth-child(1) .panel .row .intro h1 {
-  font-family: "Lora", serif;
-  font-weight: 700;
-  font-size: 7em;
-  color: #FFF;
-  width: 100%;
-  padding: 0 !important;
-  margin-top: 8%;
-  margin-bottom: 1%; }
-
-#home #homeWrap #welcome div:nth-child(1) .panel .row .intro .graphicEle {
-  margin: 0 auto 2%; }
-
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro h2 {
   font-size: 2.5em;
   font-family: "Lato", sans-serif;
@@ -285,7 +292,7 @@
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 9px;
-  margin-bottom: 2%; }
+  margin-top: 20%; }
 
 #home #homeWrap #welcome div:nth-child(1) .panel .row .intro .opSchools {
   margin: 0 auto;
@@ -298,7 +305,7 @@
 #bck {
   position: fixed;
   z-index: -1;
-  top: 0;
+  top: 15%;
   min-width: 2050px !important;
   min-height: 1150px !important;
   width: 100% !important;
@@ -386,13 +393,13 @@
 #mission {
   height: 600px;
   margin-top: 5%;
-  padding-top: 8%; }
+  padding-top: 11%; }
 
 #mission .columns {
   padding: 0; }
 
 #mission > div {
-  background: #640199;
+  background: #FFF;
   padding: 5% 0; }
 
 #mission > div > div > div:nth-child(1) .icons {
@@ -408,14 +415,14 @@
   font-family: "Lora", serif;
   font-weight: 300;
   font-size: 4em;
-  color: #FFF;
+  color: #640199;
   text-align: left; }
 
 #mission > div > div > div:nth-child(2) {
   padding-top: 2%; }
 
 #mission > div > div > div:nth-child(2) p {
-  color: #FFF;
+  color: #333;
   font-size: 1.5em;
   font-family: "Open Sans Condensed", sans-serif;
   text-align: left;
@@ -434,7 +441,7 @@
   height: 100%; }
 
 #quickLink > div > div {
-  background: #FFF;
+  background: #640199;
   border-bottom: solid 5px #C2A34F;
   padding: 4% 0 2%;
   height: 100%; }
@@ -452,7 +459,7 @@
   font-family: "Lora", serif;
   font-weight: 300;
   font-size: 4em;
-  color: #640199;
+  color: #FFF;
   text-align: left; }
 
 #quickLink > div > div div:nth-child(2) {
@@ -467,7 +474,7 @@
 #quickLink > div > div div:nth-child(2) div h2 a {
   font-family: "Open Sans Condensed", sans-serif !important;
   font-size: 0.8em !important;
-  color: #333; }
+  color: #FFF; }
 
 #quickLink > div > div > div > div:nth-child(3) {
   margin-bottom: 3%; }
@@ -484,10 +491,11 @@
 /*END QUICK LINKS*/
 /*ANNOUNCEMENTS/EVENTS*/
 #news-events {
-  background: #640199; }
+  background: #640199;
+  padding-bottom: 3%; }
 
 #news-events #article1, #news-events #article2 {
-  padding-top: 10% !important;
+  padding-top: 13% !important;
   padding-bottom: 5%; }
 
 #news-events div.row {
@@ -497,39 +505,45 @@
   padding: 0; }
 
 #news-events #article1 {
-  background: #CCC;
-  padding-bottom: 40vh;
+  background: #FFF;
+  padding-bottom: 3%;
   height: 100%; }
 
 #news-events #article1 #headContainer {
-  margin-left: 18%;
-  padding: 2% 2% 2% 0; }
+  padding: 2% 2% 2% 2%;
+  width: 40%;
+  margin: 0 auto; }
+
+#news-events #article2 #headContainer2 {
+  padding: 2% 2% 2% 2%;
+  width: 40%;
+  margin: 0 auto; }
 
 #news-events #article1 #headContainer .icons {
-  margin: 4.5% auto 0 0;
+  margin: 2.9% 5% 0 5%;
   float: left;
-  width: 11.5%; }
+  width: 7.5% !important; }
+
+#news-events #article2 #headContainer2 .icons {
+  margin: 2.9% 5% 0 20%;
+  float: left;
+  width: 7.5% !important; }
 
 #news-events #article1 #headContainer h1, #news-events #article2 #headContainer2 h1 {
   font-size: 4em;
-  float: left; }
+  text-align: left; }
 
 #news-events #article1 #headContainer h1 {
   color: #640199; }
 
 #news-events #article1 #headContainer .graphicEle, #news-events #article2 #headContainer2 .graphicEle {
-  width: 100%;
-  text-align: center; }
+  width: 20%; }
 
-#news-events #article1 #headContainer .graphicEle img, #news-events #article2 #headContainer2 .graphicEle img {
-  margin-left: 25%; }
+#news-events #article1 .article1Container, #news-events #article2 .article2Container {
+  margin-left: 3% !important; }
 
-#news-events #article1 .article1Container .imgSlide > div:nth-child(1), #news-events #article1 .article1Container .imgSlide > div:nth-child(2),
-#news-events #article1 .article1Container .imgSlide > div:nth-child(3), #news-events #article1 .article1Container .imgSlide > div:nth-child(4),
-#news-events #article1 > div:nth-child(4), .article2Container .imgSlide2 > div:nth-child(1), .article2Container .imgSlide2 > div:nth-child(2),
-.article2Container .imgSlide2 > div:nth-child(3) {
-  padding-left: 2% !important;
-  padding-top: 3% !important; }
+#news-events #article1 .article1Container .imgSlide > div:nth-child(1), #news-events #article2 .article2Container .imgSlide2 > div:nth-child(1) {
+  margin-bottom: 3% !important; }
 
 #news-events #article1 div:nth-child(2) div h3, #news-events #article1 div:nth-child(3) div h3, #news-events #article2 div:nth-child(2) div h3,
 #news-events #article2 div:nth-child(3) div h3 {
@@ -557,22 +571,8 @@
 #news-events #article1 > div:nth-child(3) > div:nth-child(2), #news-events #article2 > div:nth-child(3) > div:nth-child(2) {
   margin-bottom: 3%; }
 
-#news-events #article2 {
-  padding-bottom: 2%; }
-
-#news-events #article2 #headContainer2 {
-  margin: 0 auto;
-  padding: 2% 2%; }
-
-#news-events #article2 #headContainer2 .icons {
-  margin: 5% auto 0 12%; }
-
 #news-events #article2 #headContainer2 h1 {
   color: #FFF; }
-
-#news-events #article2 > div:nth-child(2) {
-  padding-left: 2% !important;
-  padding-top: 3% !important; }
 
 #news-events #article2 div:nth-child(2) div h3, #news-events #article2 div:nth-child(3) div h3 {
   color: #FFF; }
@@ -587,11 +587,7 @@
   margin-bottom: 1%; }
 
 #moreArtBTN > div {
-  margin-top: 10% !important;
-  text-align: center; }
-
-#moreCalBTN > div {
-  margin-top: 6% !important;
+  margin-top: 3% !important;
   text-align: center; }
 
 #moreArtBTN > div > div, #moreCalBTN > div > div {
@@ -834,11 +830,8 @@
 @media only screen and (min-width: 642px) {
   #moreArtBTN div button:nth-child(1), .moreann, #moreCalBTN div button:nth-child(1), .viewcalendar {
     display: block !important; }
-  #moreArtBTN > div {
-    margin-top: 10% !important;
-    text-align: center; }
-  #moreCalBTN > div {
-    margin-top: 6% !important;
+  #moreArtBTN > div, #moreCalBTN > div {
+    margin-top: 3% !important;
     text-align: center; }
   #moreArtBTN > div > div, #moreCalBTN > div > div {
     text-align: center; }
