--- a/css/app.css
+++ b/css/app.css
@@ -49,14 +49,16 @@
   color: #FFF; }
 
 #socialWrap .phone a, #mission span a, h2 a, a h3, .eventArticle .readmore a, .newsArticle .readmore a, .moreann a,
-.viewcalendar a, .moreRes, .footer #footAddress div:nth-child(1) p a, .footer #footAddress div:nth-child(3) p a {
+.viewcalendar a, .moreRes, .footer #footAddress div:nth-child(1) p a, .footer #footAddress div:nth-child(3) p a,
+.pt-cv-content a, .copyrightWrap div a[title="Flaticon"] {
   -webkit-transition: color .3s ease-out;
   -moz-transition: color .3s ease-out;
   -o-transition: color .3s ease-out;
   transition: color .3s ease-out; }
 
 #socialWrap .phone a:hover, #mission span a:hover, h2 a:hover, a h3:hover, .eventArticle .readmore a:hover, .newsArticle .readmore a:hover, .moreann a:hover,
-.viewcalendar a:hover, .moreRes:hover, .footer #footAddress div:nth-child(1) p a:hover, .footer #footAddress div:nth-child(3) p a:hover {
+.viewcalendar a:hover, .moreRes:hover, .footer #footAddress div:nth-child(1) p a:hover, .footer #footAddress div:nth-child(3) p a:hover,
+.copyrightWrap div a[title="Flaticon"]:hover {
   color: #C2A34F !important; }
 
 .eventDate {
@@ -114,7 +116,6 @@
   color: #FFF; }
 
 #social.icons {
-  display: none;
   float: left;
   cursor: pointer; }
 
@@ -252,6 +253,12 @@
   background: #640199;
   border: #C2A34F solid 6px; }
 
+#header1 ul #linkAthletics ul {
+  left: -10%; }
+
+#header1 ul #linkAbout ul {
+  left: -20%; }
+
 #header1 ul li ul li {
   width: 100%;
   padding-bottom: 6%; }
@@ -373,7 +380,7 @@
 
 #mission > div {
   background: #FFF;
-  padding: 17% 0 2%; }
+  padding: 2% 0; }
 
 #mission > div > div > div:nth-child(1) .icons {
   margin-left: 30%;
@@ -402,6 +409,11 @@
   padding: 1% 25% 3%;
   margin-bottom: 0; }
 
+#mission > div > div > div:nth-child(2) h3 {
+  font-family: "Lora", serif;
+  color: #333;
+  font-weight: bold; }
+
 #mission > div > div > div:nth-child(2) .readmore a {
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 1em; }
@@ -411,13 +423,14 @@
 #quickLink > div {
   text-align: center;
   position: relative;
-  height: 100%; }
+  height: 100vh; }
 
 #quickLink > div > div {
   background: #640199;
   border-bottom: solid 5px #C2A34F;
   padding: 4% 0 2%;
-  height: 100%; }
+  height: 100%;
+  padding: 19% 0 2%; }
 
 #quickLink > div > div .icons {
   margin-left: 30%;
@@ -479,12 +492,7 @@
   background: #FFF;
   padding-bottom: 110vh; }
 
-.news-events #article1 #headContainer {
-  padding: 2% 2% 2% 2%;
-  width: 40%;
-  margin: 0 auto; }
-
-.news-events #article2 #headContainer2 {
+.news-events #article1 #headContainer, .news-events #article2 #headContainer2 {
   padding: 2% 2% 2% 2%;
   width: 40%;
   margin: 0 auto; }
@@ -521,9 +529,6 @@
   color: #333;
   font-weight: bold;
   text-align: left; }
-
-.news-events #article1 div:nth-child(2) div h3, .news-events #article1 div:nth-child(3) div h3 {
-  color: #333; }
 
 .news-events #article1 div:nth-child(2) div p, .news-events #article1 div:nth-child(3) div p, .news-events #article1 div:nth-child(4) div p {
   color: #333;
@@ -582,7 +587,7 @@
 #global {
   height: 600px;
   background: url(../img/th_img4.jpg) no-repeat fixed 0 150px/cover;
-  padding-top: 10%;
+  padding-top: 5%;
   position: relative;
   -webkit-box-shadow: inset 0 0 14px 0 black;
   -moz-box-shadow: inset 0 0 14px 0 black;
